k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: nikhilg12/wisecow:latest   # Docker Hub image
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent      # Pull from Docker Hub if not present locally
